--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 body {
     font-family: Poppins, Arial, sans-serif;
     font-size: 16px;
+    height: 3400px;
 }
 a {
     color: #000;
@@ -27,6 +28,9 @@ nav {
     font-weight: bold;
     text-align: center;
     display: inline-block;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 nav p {
     float: left;
