--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@ a {
     text-decoration: none;
 }
 a:hover {
-    text-decoration: underline;
-    font-weight: 800;
+    border: 3px solid black;
+    padding: 5px 10px;
 }
 
 /* NAVIGACJA */
@@ -34,6 +34,9 @@ nav {
 }
 nav p {
     float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 nav ul {
     display: inline-block;
@@ -41,6 +44,8 @@ nav ul {
 }
 nav li {
     list-style-type: none;
-    margin: 0 0 0 55px;
+    display: inline-block;
+    width: 100px;
+    margin: 0 15px;
     float: left;
 }
