--- a/css/styles.css
+++ b/css/styles.css
@@ -3,49 +3,130 @@
     padding: 0;
     box-sizing: border-box;
 }
-body {
-    font-family: Poppins, Arial, sans-serif;
-    font-size: 16px;
-    height: 3400px;
-}
 a {
     color: #000;
     text-decoration: none;
 }
-a:hover {
-    border: 3px solid black;
-    padding: 5px 10px;
-}
-
-/* NAVIGACJA */
-
-nav {
-    width: 100%;
-    height: 100px;
-    background-color: #fff;
-    box-shadow: -6px -6px 6px 6px #818181;
-    font-size: 1rem;
-    font-weight: bold;
-    text-align: center;
-    display: inline-block;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-nav p {
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-nav ul {
-    display: inline-block;
-    float: right;
-}
-nav li {
+li {
     list-style-type: none;
-    display: inline-block;
-    width: 100px;
-    margin: 0 15px;
-    float: left;
 }
+img {
+    background-position: center;
+    background-size: contain;
+}
+
+@media only screen and (max-width: 736px) {
+    body {
+        font-family: Poppins, Arial, sans-serif;
+        font-size: 8px;
+    }
+    /* NAVIGACJA */
+    nav {
+        width: 100%;
+        height: 50px;
+        background-color: #fff;
+        box-shadow: -3px -3px 3px 3px #818181;
+        font-size: 1rem;
+        font-weight: 700;
+        display: inline-block;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+    nav p {
+        display: none;
+    }
+    .logo {
+        width: 50px;
+        height: 25px;
+        position: absolute;
+        top: 25%;
+        left: 50%;
+        margin-left: -25px;
+    }
+    .nav-list-desktop {
+        display: none;
+    }
+    .nav-list-mobile {
+        width: 15px;
+        height: 10px;
+        position: absolute;
+        top: 25%;
+        right: 40px;
+    }
+
+  }
+
+
+
+
+
+
+  
+
+@media screen and (min-width: 737px) {
+    body {
+        font-family: Poppins, Arial, sans-serif;
+        font-size: 16px;
+        height: 3400px;
+    }
+    .main-width {
+        width: 1366px;
+        height: 100px;
+        margin: 0 auto;
+    }
+
+    /* NAVIGACJA */
+    nav {
+        width: 100%;
+        height: 100px;
+        background-color: #fff;
+        box-shadow: -6px -6px 6px 6px #818181;
+        font-size: 1rem;
+        font-weight: 700;
+        display: inline-block;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+    nav p {
+        width: 300px;
+        float: left;
+        padding: 37px 0;
+    }
+    .logo {
+        width: 100px;
+        height: 50px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -25px;
+        margin-left: -25px;
+    }
+    .nav-list-desktop {
+        display: initial;
+    }
+    nav ul {
+        float: right;
+        padding: 37px 0;
+    }
+    nav li {
+        width: 100px;
+        float: left;
+    }
+    .nav-list a:hover {
+        border: 3px solid black;
+        padding: 5px 10px;
+    }
+
+    /* FULL WIDTH IMAGE */
+    .full-width-img-height850px {
+        background-image: url("../images/landing-hero.jpg");
+        width: 100%;
+        height: 850px;
+        background-position: top;
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin: 100px 0;
+    }
+  }
