--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,37 @@ img {
         background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
-        margin: 70px 0;
+        margin: 70px 0 50px 0;
+    }
+    .main-about {
+        margin: 0 auto;
+        text-align: center;
+        width: 70%;
+    }
+    h1 {
+        font-size: 3rem;
+        font-weight: 700;
+    }
+    h2 {
+        font-size: 2rem;
+        font-weight: 700;
+    }
+    h3 {
+        font-size: 1.5rem;
+        font-weight: 700;
+    }
+    p {
+        font-size: 1rem;
+        font-weight: 500;
+        margin-top: 10px;
+    }
+    hr {
+        width: 50%;
+        height: 2px;
+        background-color: #000;
+        border: none;
+        margin: 25px auto;
+
     }
   }
 
