--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,11 @@ img {
     }
     p {
         font-size: 1rem;
-        font-weight: 500;
+        font-weight: 300;
         margin-top: 10px;
+    }
+    .slogan {
+        font-size: 1.9rem;
     }
     /* NAVIGACJA */
     nav {
@@ -88,7 +91,7 @@ img {
     .main-width-centred {
         margin: 35px auto;
         text-align: center;
-        width: 80%;
+        width: 90%;
     }
     hr {
         width: 50%;
