--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ img {
 }
 
 @media only screen and (max-width: 736px) {
+/* BASICS */
     html {
         font-family: Poppins, Arial, sans-serif;
         font-size: 12px;
@@ -24,28 +25,33 @@ img {
     h1 {
         font-size: 3rem;
         font-weight: 700;
+        margin: 120px 0 50px;
+        line-height: 3.5vh;
     }
     h2 {
         font-size: 2rem;
         font-weight: 700;
+        line-height: 6vh;
     }
     h3 {
         font-size: 1.5rem;
         font-weight: 700;
     }
-    h4 {
-        font-size: 1rem;
-        font-weight: 700;
-    }
     p {
         font-size: 1rem;
         font-weight: 300;
-        margin-top: 5px;
+        margin: 10px 0;
+        line-height: 3.5vh;
+    }
+    p.bold {
+        font-size: 1rem;
+        font-weight: 600;
     }
     .slogan {
         font-size: 1.9rem;
     }
-    /* NAVIGACJA */
+
+/* NAVIGACJA */
     nav {
         width: 100%;
         height: 70px;
@@ -77,33 +83,37 @@ img {
     }
     nav li {
         float: left;
-        padding-left: 20px;
+        padding-left: 15px;
     }
-    /* FULL WIDTH IMAGE */
-    .full-width-img {
-        background-image: url("../images/landing-hero.jpg");
+/* FULL WIDTH IMAGE */
+    .full-width-img img {
         width: 100%;
-        height: 380px;
-        background-position: top;
-        background-size: cover;
-        background-repeat: no-repeat;
-        margin: 70px 0 50px 0;
+        height: auto;
+        margin-top: 70px;
     }
-    /* MAIN ABOUT */
+/* MAIN ABOUT */
     .main-width-centred {
-        margin: 35px auto;
+        margin: 7% auto 7% auto;
         text-align: center;
-        width: 90%;
+        width: 100%;
+        padding: 0 10%;
     }
     hr {
-        width: 50%;
+        width: 60%;
         height: 2px;
         background-color: #000;
         border: none;
-        margin: 25px auto;
-
+        margin: 40px auto;
     }
-    /* MAIN SHOP */
+    button.about {
+        width: 200px;
+        background-color: #fff;
+        border: 4px solid #000;
+        margin: 20px 0 0 0;
+        padding: 4px 0;
+        color: #000;    
+    }
+/* MAIN SHOP */
     .product {
         margin: 40px 0;
     }
@@ -113,23 +123,12 @@ img {
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
-        margin: 10px 0;
+        margin-bottom: 8vh;
     }
-    /* INSTAGRAM
-    .instagram {
-        width: 100%;
-    }
-    .instagram-img {
-        width: 50%;
-        background-image: url("../images/torba1-square.jpg");
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-    } */
-    /* FOOTER */
+/* FOOTER */
     footer {
         width: 100%;
-        height: 90px;
+        height: 120px;
         background-color: #fff;
         box-shadow: 0px 0px 3px 1px #818181;
         text-align: center;
@@ -148,77 +147,3 @@ img {
         margin: 5% auto;
     }
 }
-  
-
-
-
-
-
-
-  
-
-@media screen and (min-width: 737px) {
-    body {
-        font-family: Poppins, Arial, sans-serif;
-        font-size: 16px;
-    }
-    .main-width {
-        width: 1366px;
-        height: 100px;
-        margin: 0 auto;
-    }
-
-    /* NAVIGACJA */
-    nav {
-        width: 100%;
-        height: 100px;
-        background-color: #fff;
-        box-shadow: -6px -6px 6px 6px #818181;
-        font-size: 1rem;
-        font-weight: 700;
-        display: inline-block;
-        position: fixed;
-        top: 0;
-        left: 0;
-    }
-    nav p {
-        width: 300px;
-        float: left;
-        padding: 37px 0;
-    }
-    .logo {
-        width: 100px;
-        height: 50px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-top: -25px;
-        margin-left: -25px;
-    }
-    .nav-list-desktop {
-        display: initial;
-    }
-    nav ul {
-        float: right;
-        padding: 37px 0;
-    }
-    nav li {
-        width: 100px;
-        float: left;
-    }
-    .nav-list a:hover {
-        border: 3px solid black;
-        padding: 5px 10px;
-    }
-
-    /* FULL WIDTH IMAGE */
-    .full-width-img {
-        background-image: url("../images/landing-hero.jpg");
-        width: 100%;
-        height: 850px;
-        background-position: top;
-        background-size: cover;
-        background-repeat: no-repeat;
-        margin: 100px 0;
-    }
-  }
