--- a/css/styles.css
+++ b/css/styles.css
@@ -1,149 +1,97 @@
 * {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-}
-a {
     color: #000;
-    text-decoration: none;
-}
-li {
-    list-style-type: none;
-}
-img {
+    font-family: Poppins, Arial, sans-serif;
+    font-weight: 800;
+    text-align: center;
+    text-decoration: none; 
+    background-size: contain;
     background-position: center;
-    background-size: cover;
-}
+    background-repeat: no-repeat; }
 
 @media only screen and (max-width: 736px) {
 /* BASICS */
     html {
-        font-family: Poppins, Arial, sans-serif;
         font-size: 12px;
-        margin: 0 auto;;
-    }
+        margin: 0 auto; }
     h1 {
-        font-size: 3rem;
-        font-weight: 700;
-        margin: 120px 0 50px;
-        line-height: 3.5vh;
-    }
+        font-size: 3rem; }
     h2 {
-        font-size: 2rem;
-        font-weight: 700;
-        line-height: 6vh;
-    }
+        font-size: 2rem; }
     h3 {
-        font-size: 1.5rem;
-        font-weight: 700;
-    }
+        font-size: 1.5rem; }
     p {
         font-size: 1rem;
         font-weight: 300;
-        margin: 10px 0;
-        line-height: 3.5vh;
-    }
+        line-height: 3.5vh; }
     p.bold {
         font-size: 1rem;
-        font-weight: 600;
-    }
+        font-weight: 600; }
     .slogan {
-        font-size: 1.9rem;
+        font-size: 1.9rem; }
+    hr {
+        width: 60%;
+        height: 2px;
+        background-color: #000;
+        border: none;
     }
-
 /* NAVIGACJA */
     nav {
         width: 100%;
         height: 70px;
         background-color: #fff;
         box-shadow: -7px -3px 3px 3px #818181;
-        font-weight: 700;
         font-size: 1.2rem;
-        display: inline-block;
         position: fixed;
         top: 0;
-        left: 0;
-    }
+        left: 0; }
     nav p {
-        display: none;
-    }
+        display: none; }
     .logo {
         width: 70px;
         height: 35px;
         position: absolute;
         top: 25%;
-        left: 40px;
-    }
-    .nav-list-desktop {
-        font-size: 1rem;
-    }
-    nav ul {
+        left: 35px; }
+    .nav-top {
         float: right;
-        padding: 30px 40px 30px 0;
-    }
-    nav li {
-        float: left;
-        padding-left: 15px;
-    }
+        padding: 27px 0; }
+    .nav-top a {
+        padding-left: 12px; }
+
 /* FULL WIDTH IMAGE */
     .full-width-img img {
         width: 100%;
-        height: auto;
-        margin-top: 70px;
-    }
+        height: auto; }
+
 /* MAIN ABOUT */
-    .main-width-centred {
-        margin: 7% auto 7% auto;
-        text-align: center;
-        width: 100%;
-        padding: 0 10%;
-    }
-    hr {
-        width: 60%;
-        height: 2px;
-        background-color: #000;
-        border: none;
-        margin: 40px auto;
-    }
-    button.about {
-        width: 200px;
-        background-color: #fff;
-        border: 4px solid #000;
-        margin: 20px 0 0 0;
-        padding: 4px 0;
-        color: #000;    
-    }
+    .main-width {
+        padding: 0 10%; }
+    .link-underline a {
+        text-decoration: underline; }
+    
 /* MAIN SHOP */
-    .product {
-        margin: 40px 0;
-    }
     .main-product-img img{
         width: 100%;
-        height: auto;
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        margin-bottom: 8vh;
-    }
+        height: auto; }
 /* FOOTER */
     footer {
         width: 100%;
         height: 120px;
         background-color: #fff;
-        box-shadow: 0px 0px 3px 1px #818181;
-        text-align: center;
-        padding: 25px;
-    }
+        box-shadow: 0px 0px 3px 1px #818181; }
     footer a {
-        text-decoration: underline;
-    }
+        text-decoration: underline;}
     .logo-slogan {
         width: 50%;
         height: 150px;
-        background-image: url(../images/logo-slogan.png);
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        margin: 5% auto;
-    }
+        background-image: url(../images/logo-slogan.png); }
 }
+
+
+
+
+
+
