--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,16 @@
     h1 {
         font-size: 3rem; }
     h2 {
-        font-size: 2rem; }
+        font-size: 2rem;
+        margin: 30px 0 0 0; }
     h3 {
         font-size: 1.5rem; }
     p {
-        font-size: 1rem;
+        font-size: 1.1rem;
         font-weight: 300;
-        line-height: 3.5vh; }
+        line-height: 3.5vh; 
+        margin: 10px 0; }
     p.bold {
-        font-size: 1rem;
         font-weight: 600; }
     .slogan {
         font-size: 1.9rem; }
@@ -35,8 +36,10 @@
         width: 60%;
         height: 2px;
         background-color: #000;
-        border: none;
-    }
+        border: none; 
+        margin: 50px auto; }
+    .main-width {
+        padding: 0 10%; }
 /* NAVIGACJA */
     nav {
         width: 100%;
@@ -64,11 +67,10 @@
 /* FULL WIDTH IMAGE */
     .full-width-img img {
         width: 100%;
-        height: auto; }
+        height: auto; 
+        margin-top: 40px;}
 
 /* MAIN ABOUT */
-    .main-width {
-        padding: 0 10%; }
     .link-underline a {
         text-decoration: underline; }
     
@@ -76,7 +78,10 @@
     .main-product-img img{
         width: 100%;
         height: auto; }
-/* FOOTER */
+    h2.shop {
+        margin-top: 60px;
+    }
+        /* FOOTER */
     footer {
         width: 100%;
         height: 120px;
