--- a/css/styles.css
+++ b/css/styles.css
@@ -14,32 +14,37 @@
 @media only screen and (max-width: 736px) {
 /* BASICS */
     html {
-        font-size: 12px;}
+        font-size: 14px;}
     h1 {
         font-size: 3rem; }
     h2 {
         font-size: 2rem;
-        letter-spacing: 1px;
         margin: 30px 0 0 0; }
     h3 {
         font-size: 1.5rem; }
     p {
         font-size: 1.1rem;
         font-weight: 300;
-        line-height: 3.5vh; 
+        line-height: 2rem; 
         margin: 10px 0; }
     p.bold {
         font-weight: 800; }
     .slogan {
         font-size: 3rem;
-        line-height: 42px;
+        letter-spacing: 1px;
+        line-height: 4rem;
         margin: 25px 0; }
+    .claim {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+        margin: 25px 0; 
+    }
     hr {
-        width: 60%;
+        width: 30%;
         height: 2px;
         background-color: #000;
         border: none; 
-        margin: 25px 0; }
+        margin: 30px 0; }
     .main-width {
         padding: 0 10%; }
 /* NAVIGACJA */
