--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,35 @@
     background-position: center;
     background-repeat: no-repeat; }
 
+
+
+p.bold {
+    font-weight: 800; }
+}
+hr {
+    background-color: #000;
+    border: none; }
+/* NAVIGACJA */
+nav {
+    width: 100vw;
+    background-color: #fff;
+    box-shadow: -7px -3px 3px 3px #818181;
+    position: fixed;
+    top: 0;
+    left: 0; }
+.nav-top {
+    float: right; }
+/* MAIN ABOUT */
+a.link-underline {
+    text-decoration: underline; }
+.logo-slogan {
+    background-image: url(../images/ducky-logo-full-pl.jpg); }
+footer {
+    background-color: #fff;
+    box-shadow: 0px 0px 3px 1px #818181; }
+footer p {
+    text-align: center; }
+
 @media only screen and (max-width: 736px) {
 /* BASICS */
     html {
@@ -31,31 +60,20 @@
         font-weight: 300;
         line-height: 2rem; 
         margin: 10px 0; }
-    p.bold {
-        font-weight: 800; }
     .claim {
         font-size: 1.5rem;
         line-height: 2.5rem;
-        margin: 25px 0; 
-    }
+        margin: 25px 0; }
     hr {
         width: 30%;
         height: 2px;
-        background-color: #000;
-        border: none; 
         margin: 30px 0; }
     .main-width {
         padding: 0 10%; }
 /* NAVIGACJA */
     nav {
-        width: 100vw;
         height: 70px;
-        background-color: #fff;
-        box-shadow: -7px -3px 3px 3px #818181;
-        font-size: 0.8rem;
-        position: fixed;
-        top: 0;
-        left: 0; }
+        font-size: 0.8rem; }
     nav p {
         display: none; }
     .logo {
@@ -65,7 +83,6 @@
         top: 25%;
         left: 35px; }
     .nav-top {
-        float: right;
         padding: 27px 0; }
     .nav-top a {
         padding-left: 3vw; }
@@ -80,10 +97,6 @@
     .full-width-img-desktop img {
         display: none; }
 
-/* MAIN ABOUT */
-    a.link-underline {
-        text-decoration: underline; }
-    
 /* MAIN SHOP */
     img.product-img-mobile {
         width: 100%;
@@ -92,25 +105,19 @@
         display: none; }
     img.product-img-desktop {
         display: none; }
-        .br {
-            display: none;
-        }
+    .br {
+            display: none; }
 /* FOOTER */
     .logo-slogan {
         width: 50%;
         height: 150px;
-        margin: 40px auto;
-        background-image: url(../images/ducky-logo-full-pl.jpg); }
+        margin: 40px auto; }
     footer {
             width: 100%;
             height: 130px;
-            background-color: #fff;
-            box-shadow: 0px 0px 3px 1px #818181; 
             padding: 20px 0; }
-    footer p {
-        text-align: center; }
 }
-@media only screen and (max-width: 1080px) and (min-width: 737px) {
+/* @media only screen and (max-width: 1080px) and (min-width: 737px) {
     /* BASICS */
     html {
         font-size: 16px;}
@@ -206,7 +213,7 @@
             padding: 20px 0; }
     footer p {
         text-align: center; }
-}
+} */
 
 
 
