--- a/css/styles.css
+++ b/css/styles.css
@@ -11,15 +11,84 @@
     background-position: center;
     background-repeat: no-repeat; }
 
+/* BASICS */
+.full-width-img img {
+    width: 100%;
+    height: auto; 
+    margin-top: 40px; }
+.main-width {
+    padding: 0 9vw; }
+a.link-underline {
+    text-decoration: underline; }
+hr {
+    width: 50vw;
+    height: 2px;
+    background-color: #000;
+    border: none; 
+    margin: 5vh 0; }
+/* TYPOGRAPHY */
+p {
+    font-size: 1.1rem;
+    font-weight: 300;
+    line-height: 2rem; 
+    margin: 10px 0; }
+p.bold {
+    font-weight: 800; }
+.claim {
+    font-size: 1.5rem;
+    margin: 6vh 0; }
+/* NAVIGACJA */
+nav {
+    width: 100%;
+    font-size: 1rem; 
+    background-color: #fff;
+    box-shadow: -7px -3px 3px 3px #818181;
+    position: fixed;
+    top: 0;
+    left: 0; }
+.nav-logo {
+    display: inline-flex;
+    justify-content: start;
+    align-items: center; }
+.nav-logo img {
+    height: auto; }
+.nav-links {
+    display: inline-flex;
+    float: right;
+    justify-content: flex-end;
+    align-items: center; }
+.nav-links a{
+    padding-left: 3vw; }
+/* MAIN SHOP */
+img.product-img {
+    width: 100%;
+    height: auto; }
+/* FOOTER */
+.logo-slogan {
+    width: 50%;
+    height: 15vh;
+    margin: 5vh auto;
+    background-image: url(../images/ducky-logo-full-pl.jpg); }
+footer {
+    width: 100%;
+    height: 15vh;
+    background-color: #fff;
+    box-shadow: 0px 0px 3px 1px #818181; 
+    padding: 2vh 0; }
+footer p {
+    font-size: 1rem;
+    text-align: center; }
+
 @media only screen and (max-width: 736px) {
 /* BASICS */
     html {
-        font-size: 14px;}
+        font-size: 14px; }
+    /* TYPOGRAPHY */
     h1 {
         font-size: 3rem;
-        letter-spacing: 1px;
+        letter-spacing: 0.3vw;
         line-height: 4rem;
-        margin: 25px 0; }
+        margin: 5vh 0; }
     h2 {
         font-size: 2rem;
         margin: 80px 0 20px 0; }
@@ -27,78 +96,22 @@
         font-size: 1.5rem; 
         margin: 20px 0; }
     p {
-        font-size: 1.1rem;
-        font-weight: 300;
-        line-height: 2rem; 
         margin: 10px 0; }
-    p.bold {
-        font-weight: 800; }
-    .claim {
-        font-size: 1.5rem;
-        line-height: 2.5rem;
-        margin: 25px 0; 
-    }
-    hr {
-        width: 30%;
-        height: 2px;
-        background-color: #000;
-        border: none; 
-        margin: 30px 0; }
-    .main-width {
-        padding: 0 10%; }
+
 /* NAVIGACJA */
     nav {
-        width: 100%;
-        height: 70px;
-        background-color: #fff;
-        box-shadow: -7px -3px 3px 3px #818181;
-        font-size: 1.2rem;
-        position: fixed;
-        top: 0;
-        left: 0; }
+        height: 10vh; }
+    .nav-logo {
+        height: 10vh; }
+    .nav-logo img {
+        width: 11vh; }
     nav p {
         display: none; }
-    .logo {
-        width: 70px;
-        height: 35px;
-        position: absolute;
-        top: 25%;
-        left: 35px; }
-    .nav-top {
-        float: right;
-        padding: 27px 0; }
-    .nav-top a {
-        padding-left: 12px; }
-
-/* FULL WIDTH IMAGE */
-    .full-width-img img {
-        width: 100%;
-        height: auto; 
-        margin-top: 40px;}
-
-/* MAIN ABOUT */
-    a.link-underline {
-        text-decoration: underline; }
-    
-/* MAIN SHOP */
-    img.product-img {
-        width: 100%;
-        height: auto; }
-/* FOOTER */
-    .logo-slogan {
-        width: 50%;
-        height: 150px;
-        margin: 40px auto;
-        background-image: url(../images/ducky-logo-full-pl.jpg); }
-    footer {
-            width: 100%;
-            height: 130px;
-            background-color: #fff;
-            box-shadow: 0px 0px 3px 1px #818181; 
-            padding: 20px 0; }
-    footer p {
-        text-align: center; }
+    .nav-links {
+        height: 10vh; }
 }
+
+
 
 
 
