--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    height: initial;
     box-sizing: border-box;
     color: #000;
     font-family: Poppins, Arial, sans-serif;
@@ -14,8 +15,7 @@
 /* BASICS */
 .full-width-img img {
     width: 100%;
-    height: auto; 
-    margin-top: 40px; }
+    margin-top: 50px; }
 .main-width {
     padding: 0 9vw; }
 a.link-underline {
@@ -27,94 +27,82 @@ hr {
     border: none; 
     margin: 5vh 0; }
 /* TYPOGRAPHY */
+h1 {
+    font-size: 3rem;
+    line-height: 4rem; 
+    margin-top: 8vh; }
+h2 {
+    font-size: 2rem;
+    line-height: 3rem;
+    margin-top: 10vh; }
+h3 {
+    font-size: 1.5rem;
+    margin-top: 4vh; }
 p {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 300;
-    line-height: 2rem; 
-    margin: 10px 0; }
+    line-height: 1.7rem;
+    margin: 2vh 0; }
 p.bold {
     font-weight: 800; }
-.claim {
-    font-size: 1.5rem;
-    margin: 6vh 0; }
+p.small {
+    font-size: 0.6rem; }
 /* NAVIGACJA */
+nav * {
+    height: 20vw; }
 nav {
     width: 100%;
     font-size: 1rem; 
     background-color: #fff;
-    box-shadow: -7px -3px 3px 3px #818181;
+    box-shadow: -7px -3px 3px 3px #818181; 
     position: fixed;
-    top: 0;
-    left: 0; }
+    top: 0; }
 .nav-logo {
     display: inline-flex;
     justify-content: start;
     align-items: center; }
 .nav-logo img {
+    width: 23vw;
     height: auto; }
 .nav-links {
     display: inline-flex;
     float: right;
     justify-content: flex-end;
     align-items: center; }
-.nav-links a{
+.nav-links a {
+    height: initial;
     padding-left: 3vw; }
 /* MAIN SHOP */
 img.product-img {
-    width: 100%;
-    height: auto; }
+    width: 100%; }
+/* LOGO BOTTOM */
+.logo-full {
+    width: 50vw;
+    height: 50vw;
+    margin: 0 auto;
+    background-image: url(../images/ducky_logo-full_pl.jpg); }
 /* FOOTER */
-.logo-slogan {
-    width: 50%;
-    height: 15vh;
-    margin: 5vh auto;
-    background-image: url(../images/ducky-logo-full-pl.jpg); }
 footer {
     width: 100%;
-    height: 15vh;
+    height: 15vw;
     background-color: #fff;
-    box-shadow: 0px 0px 3px 1px #818181; 
-    padding: 2vh 0; }
-footer p {
-    font-size: 1rem;
-    text-align: center; }
+    box-shadow: 0px 0px 3px 1px #818181;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; }
 
 @media only screen and (max-width: 736px) {
-/* BASICS */
     html {
         font-size: 14px; }
-    /* TYPOGRAPHY */
-    h1 {
-        font-size: 3rem;
-        letter-spacing: 0.3vw;
-        line-height: 4rem;
-        margin: 5vh 0; }
-    h2 {
-        font-size: 2rem;
-        margin: 80px 0 20px 0; }
-    h3 {
-        font-size: 1.5rem; 
-        margin: 20px 0; }
-    p {
-        margin: 10px 0; }
-
-/* NAVIGACJA */
-    nav {
-        height: 10vh; }
-    .nav-logo {
-        height: 10vh; }
-    .nav-logo img {
-        width: 12vh; }
     nav p {
-        display: none; }
-    .nav-links {
-        height: 10vh; }
+        display: none; } }
+@media only screen and (min-width: 737px) {
+        html {
+            font-size: 28px; }
+        nav * {
+            height: 14vw; }
+        .nav-logo img {
+            width: 18vw; }
+        nav p {
+            display: none; }
 }
-
-
-
-
-
-
-
-
