--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,47 @@
     font-weight: 800;
     text-align: left;
     text-decoration: none; 
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat; }
 
 /* BASICS */
-.full-width-img img {
-    width: 100%;
-    margin-top: 50px; }
+html {
+    font-size: 14px; }
 .main-width {
     padding: 0 9vw; }
+section {
+    margin: 10vh 0;
+}
+/* IMAGES */
+.img-hero {
+    max-width: 100%;
+    height: 95vh;
+    margin-top: 20vw;
+    background-image: url("../images/ducky_hero-m.jpg"); }
+.product-img {
+    max-width: 100%;
+    height: 85vh;
+    background-image: url("../images/ducky_worek-m-1.jpg"); 
+    background-size: cover; }
+.logo-full {
+    width: 50vw;
+    height: 50vw;
+    margin: 0 auto;
+    background-size: contain;
+    background-image: url("../images/ducky_logofull_pl.jpg"); }
+/* MISC */
+.product {
+    margin-top: 8vw;
+}
+footer {
+    width: 100%;
+    height: 15vw;
+    background-color: #fff;
+    box-shadow: 0px 0px 3px 1px #818181;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; }
 a:hover {
     text-decoration: underline; }
 a.link-underline {
@@ -31,15 +62,14 @@ hr {
 /* TYPOGRAPHY */
 h1 {
     font-size: 3rem;
-    line-height: 4rem; 
-    margin-top: 8vh; }
+    line-height: 4rem; }
 h2 {
     font-size: 2rem;
     line-height: 3rem;
     margin-bottom: 2vw; }
 h3 {
     font-size: 1.5rem;
-    margin-top: 4vh; }
+    margin-top: 3vh; }
 p {
     font-size: 1rem;
     font-weight: 300;
@@ -62,6 +92,7 @@ nav {
 .slogan {
     display: inline-flex;
     align-items: center;
+    display: none;
     margin: 0; }
 .nav-logo {
 display: inline-flex;
@@ -78,48 +109,49 @@ align-items: center; }
 .nav-links a {
     height: initial;
     padding-left: 3vw; }
-    /* MAIN SHOP */
-img.product-img {
-    width: 100%; }
-/* LOGO BOTTOM */
-.logo-full {
-    width: 50vw;
-    height: 50vw;
-    margin: 0 auto;
-    background-image: url(../images/ducky_logo-full_pl.jpg); }
-/* FOOTER */
-footer {
-    width: 100%;
-    height: 15vw;
-    background-color: #fff;
-    box-shadow: 0px 0px 3px 1px #818181;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center; }
 
-@media only screen and (max-width: 736px) {
-    html {
-        font-size: 14px; }
-    .slogan {
-        display: none; } }
-@media only screen and (max-width: 1299px) and (min-width: 736px) {
+@media only screen and (min-width: 736px) {
+    /* BASICS */
     html {
         font-size: 28px; }
+    /* IMAGES */
+    .img-hero {
+        background-image: url("../images/ducky_hero-ip.jpg");
+        margin-top: 14vw; }
+    .product-img {
+        background-image: url("../images/ducky_worek-ip-2.jpg"); }
+    /* NAVIGATION */
     nav * {
         height: 14vw; }
     .nav-logo img {
         width: 18vw; }
-    .slogan {
-        display: none; } }
+    }
 @media only screen and (min-width: 1300px) {
+    /* BASICS */
     html {
         font-size: 16px; }
+    /* IMAGES */
+    .img-hero {
+        background-image: url("../images/ducky_hero-d.jpg");
+        margin-top: 5vw; }
+    .product-img {
+        background-image: url("../images/ducky_worek-d-1.jpg"); }
+    /* MISC */
+    .logo-full {
+        width: 300px;
+        height: 300px; }
+    .disable {
+        display: none; }
+    a.link-underline {
+        text-decoration: none; }
+    a.link-underline:hover {
+        text-decoration: underline; }
+    /* TYPOGRAPHY */
     h1 {
         font-size: 6rem;
         line-height: 7rem; }
     p {
-        margin: 0 0 3vw 0;
-    }
+        margin: 0 0 3vw 0; }
     /* NAVIGATION */
     nav * {
         height: 5vw;
@@ -127,11 +159,12 @@ footer {
     nav .main-width {
         display: flex;
         justify-content: space-between; }
+    .slogan {
+        display: inline-flex; }
     .nav-logo img {
         width: 7vw; }
     /* ABOUT */
     .about {
-        margin: 4vw 0;
         display: flex; }
     .about h1 {
         text-align: right;
@@ -141,20 +174,10 @@ footer {
     /* SHOP */
     .product * {
         text-align: center; }
-    /* LOGO BOTTOM */
-    .logo-full {
-        width: 30vw;
-        height: 30vw; }
+    /* FOOTER */
     footer {
         height: 7vw; }
     p.footer {
         font-size: 0.9rem;
         margin: 0; }
-    /* MISC */
-    .disable {
-        display: none; }
-    a.link-underline {
-        text-decoration: none; }
-    a.link-underline:hover {
-        text-decoration: underline; }
 }   
