--- a/css/universal/navigation.css
+++ b/css/universal/navigation.css
@@ -6,8 +6,6 @@ nav {
     position: fixed;
     top: 0; }
 .slogan {
-    font-weight: 800;
-    font-size: 0.8rem;
     display: inline-flex;
     align-items: center;
     display: none;
@@ -25,6 +23,7 @@ nav {
     justify-content: flex-end;
     align-items: center; }
 .nav-links a {
+    font-size: 1.8rem;
     height: initial;
     padding-left: 3vw; }
 
@@ -36,6 +35,7 @@ nav {
     nav * {
         height: 5vw;
         letter-spacing: 0.5px; }
+    .nav-links a { font-size: 1rem; }
     nav .main-width {
         display: flex;
         justify-content: space-between; }
