--- a/css/universal/footer.css
+++ b/css/universal/footer.css
@@ -13,9 +13,8 @@ footer {
     justify-content: center;
     align-items: center; }
 p.footer { 
-    font-size: 1rem;
-    font-weight: 300;
-    font-size: 0.7rem; }
+    font-size: 1.2rem;
+    font-weight: 300; }
 
 
 @media only screen and (min-width: 736px) {}
@@ -24,7 +23,5 @@ p.footer {
         width: 300px;
         height: 300px; }
     footer { height: 7vw; }
-    p.footer {
-        font-size: 0.9rem;
-        margin: 0; }
+    p.footer { font-size: 1rem; }
 }   
