--- a/css/universal/typography.css
+++ b/css/universal/typography.css
@@ -1,37 +1,51 @@
 * {
     font-family: Poppins, Arial, sans-serif;
-    font-weight: 800;
+    font-weight: 300;
     text-align: left;
 }
+h1, h2, h3 {
+    font-weight: 800;
+    margin: 2rem 0;
+}
+.bold { font-weight: 600; }
 
-html { font-size: 14px; }
+
+html { font-size: 8px; }
 h1 {
+    font-size: 6rem;
+    line-height: 8rem; }
+h2 {
+    font-size: 4rem;
+    line-height: 6rem; }
+h3 {
     font-size: 3rem;
     line-height: 4rem; }
-h2 {
-    font-size: 2rem;
-    line-height: 3rem;
-    margin-bottom: 2vw; }
-h3 {
-    font-size: 1.5rem;
-    margin-top: 3vh; }
 p {
-    font-size: 1rem;
-    font-weight: 300;
-    line-height: 1.7rem;
-    margin: 2vh 0; }
-p.bold { font-weight: 800; }
+    font-size: 1.8rem;
+    line-height: 3rem;
+    margin: 2rem 0; }
 
 @media only screen and (min-width: 736px) {
-    html { font-size: 28px; } 
+    html { font-size: 12px; } 
 }
 @media only screen and (min-width: 1300px) {
     html { font-size: 16px; } 
-    h1 {
-        font-size: 6rem;
-        line-height: 7rem; }
-    p { margin: 0 0 3vw 0; }
-    .about h1 {
-        text-align: right;
-        margin: 0; }
+    h1, h2, h3 {
+        font-weight: 800;
+        margin: 0;
+    }
+    h2 {
+        font-size: 3rem;
+        line-height: 4rem; }
+    h3 {
+        font-size: 2rem;
+        line-height: 3rem; }
+    p {
+        font-size: 1rem;
+        line-height: 2rem;
+        margin: 2rem 0; }
+    .desktop {
+        width: 70%;
+        margin: 0 auto;
+    }
 }   
