--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
         text-align: right;
         margin: 0; }
     .about-slogan, .about-text {
+        width: 50%;
         padding: 0 2vw; }
     /* SHOP */
     .product * {
