--- a/css/universal/navigation.css
+++ b/css/universal/navigation.css
@@ -6,6 +6,7 @@ nav {
     position: fixed;
     top: 0; }
 .slogan {
+    font-size: 0.8rem;
     display: inline-flex;
     align-items: center;
     display: none;
