--- a/css/universal/typography.css
+++ b/css/universal/typography.css
@@ -1,15 +1,12 @@
 * {
     font-family: Poppins, Arial, sans-serif;
     font-weight: 300;
-    text-align: left;
-}
+    text-align: left; }
 h1, h2, h3 {
     font-weight: 800;
-    margin: 2rem 0;
-}
+    margin: 2rem 0; }
 .bold { font-weight: 600; }
-
-
+.extra-bold {font-weight: 800;}
 html { font-size: 8px; }
 h1 {
     font-size: 6rem;
@@ -44,8 +41,4 @@ p {
         font-size: 1rem;
         line-height: 2rem;
         margin: 2rem 0; }
-    .desktop {
-        width: 70%;
-        margin: 0 auto;
-    }
 }   
