--- a/css/universal/basics.css
+++ b/css/universal/basics.css
@@ -7,6 +7,7 @@
     text-decoration: none;  }
 
 .main-width { padding: 0 9vw; }
+.main-width-half { padding: 0 20vw;;}
 section { margin: 10vh 0; }
 
 a:hover { text-decoration: underline; }
