--- a/css/universal/footer.css
+++ b/css/universal/footer.css
@@ -1,14 +1,8 @@
-.logo-bottom {
-    width: 50vw;
-    height: 50vw;
-    margin: 0 auto;
-    background-size: contain;
-    background-image: url("../../images/ducky_logofull_pl.jpg"); }
 footer {
     width: 100%;
     height: 15vw;
     background-color: #fff;
-    box-shadow: 0px 0px 3px 1px #818181;
+    box-shadow: 0px -4px 6px -5px #818181;
     display: inline-flex;
     justify-content: center;
     align-items: center; }
@@ -19,7 +13,7 @@ p.footer {
 
 @media only screen and (min-width: 736px) {}
 @media only screen and (min-width: 1300px) {
-    .logo-bottom {
+    .logo-full {
         width: 300px;
         height: 300px; }
     footer { height: 7vw; }
