--- a/css/universal/typography.css
+++ b/css/universal/typography.css
@@ -1,7 +1,6 @@
 * {
     font-family: Poppins, Arial, sans-serif;
-    font-weight: 300;
-    text-align: left; }
+    font-weight: 300; }
 h1, h2, h3 {
     font-weight: 800;
     margin: 2rem 0; }
