--- a/css/about.css
+++ b/css/about.css
@@ -1,30 +1,11 @@
 
-.logo-full {
-    width: 70vw;
-    height: 60vw;
-}
-section { margin: 4vh 0; }
 
 @media only screen and (min-width: 736px) {}
 @media only screen and (min-width: 1300px) {
-    /* * { text-align: center; } */
-    .logo-full {
-        width: 30vw;
-        height: 25vw;
-    }
     .about-text-column {
         width: 50%;
         float: left;
-        padding-right: 4vw;
+        text-align: justify;
+        padding-right: 3vw;
     }
-    #contact {
-        text-align: center;
-        margin: 10vw 0;
-    }
-    hr {
-        width: 100vw;
-        margin: 0 auto; }
-    section { margin: 7vh 0; }
-    section.about-welcome { margin: 0; }
-
 }
