--- a/css/about.css
+++ b/css/about.css
@@ -5,7 +5,7 @@
     .about-text-column {
         width: 50%;
         float: left;
-        text-align: justify;
+        text-align: left;
         padding-right: 3vw;
     }
 }
