--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,14 @@
 
 @media only screen and (min-width: 736px) {}
 @media only screen and (min-width: 1300px) {
-    .disable {
-        display: none; }
+    .disable { display: none; }
     /* ABOUT */
-    .about {
-        display: flex; }
+    .about { display: flex; }
     .about h1 {
         text-align: right;
         margin: 0; }
+    .about-text { text-align: left; }
     .about-slogan, .about-text {
         width: 50%;
         padding: 0 2vw; }
-    /* SHOP */
-    .product * {
-        text-align: center; }
-    }
 }   
